--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -211,20 +211,20 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2"> <%=userData.Name%></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6><%=userData.Name%></h6>
+             
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="">
                 <i class="bi bi-person"></i>
                 <span>My Profile</span>
               </a>
@@ -233,28 +233,28 @@
               <hr class="dropdown-divider">
             </li>
 
-            <li>
+            <!-- <li>
               <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                 <i class="bi bi-gear"></i>
                 <span>Account Settings</span>
               </a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
               <hr class="dropdown-divider">
-            </li>
+            </li> -->
 
-            <li>
+            <!-- <li>
               <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
                 <i class="bi bi-question-circle"></i>
                 <span>Need Help?</span>
               </a>
-            </li>
+            </li> -->
             <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="/Logout">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
@@ -674,6 +674,7 @@
                   <table class="table table-borderless datatable">
                     <thead>
                       <tr>
+                        
                         <th scope="col">id</th>
                         <th scope="col">Name</th>
                         <th scope="col">Complaint Type</th>
@@ -683,30 +684,21 @@
                       </tr>
                     </thead>
                     <tbody>
+                        <%for(var i =0;i < complaints.length;i++){%>
                       <tr>
-                        <th scope="row"><a href="#">#2457</a></th>
-                        <td>Brandon Jacob</td>
-                        <td>At praesentium minu</td>
-                        <td>22/05/2022</td>
-                        <td><span class="badge bg-success">Approved</span></td>
-                        <td><input type="submit" class="btn btn-primary btn-sm"  value="View Complaint" onclick=""></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2147</a></th>
-                        <td>Bridie Kessler</td>
-                        <td>Blanditiis dolor omnis</td>
-                        <td>22/05/2022</td>
-                        <td><span class="badge bg-warning">Pending</span></td>
-                        <td><input type="submit" class="btn btn-primary btn-sm"  value="View Complaint" onclick=""></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2049</a></th>
-                        <td>Ashleigh Langosh</td>
-                        <td>At recusandae consectetur</td>
-                        <td>22/05/2022</td>
+                        <th scope="row"><a href="#"><%=complaints[i].cid.slice(0,4)%>...</a></th>
+                        <td><%=userData.Name%></td>
+                        <td><%=complaints[i].type%></td>
+
+                        <%const dateObject = new Date(complaints[i].Time["_seconds"]*1000)%>
+                        <%const date = dateObject.getDate();%>
+                        <%const month = dateObject.getMonth() + 1;%>
+                        <%const year = dateObject.getFullYear();%>
+                        <td><%=`${date}-${month}-${year}`%></td>
                         <td><span class="badge bg-danger">Rejected</span></td>
-                        <td><input type="submit" class="btn btn-primary btn-sm"  value="View Complaint" onclick=""></td>
+                        <td><a href="/GetFullComplaint?cid=<%=complaints[i].cid%>" class="btn btn-primary btn-sm" >View Complaint   </a></td>
                       </tr>
+                      <%}%>
                      </tbody>
                   </table>
 
