--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -267,14 +267,14 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link " href="/Dashboard">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link " href="/Dashboard">
           <i class="bi bi-grid"></i>
           <span>Edit Profile</span>
         </a>
@@ -348,13 +348,12 @@
       <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="/Dashboard">Home</a></li>
           <li class="breadcrumb-item active">Edit Profile</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
-<!--     end ------------------------------     -->
 <section class="section">
     <div class="row">
       <div class="col-lg-8">
