--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -31,6 +31,29 @@
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
+  <style>
+    /* Add a green text color and a checkmark when the requirements are right */
+    .valid {
+        color: green;
+    }
+
+    .valid:before {
+        position: relative;
+        left: 0px;
+        content: "✔";
+    }
+
+    /* Add a red text color and an "x" when the requirements are wrong */
+    .invalid {
+        color: red;
+    }
+
+    .invalid:before {
+        position: relative;
+        left: 0px;
+        content: "✖";
+    }
+</style>
 
 </head>
 
@@ -69,17 +92,30 @@
                     </div><br>
                 
                     <div class="col-12">
-                        <label for="yourPassword" class="form-label">New Password</label>
-                        <div class="col-12">
-                            <input type="password" name="newpassword" id="" placeholder="New Password" class="form-control">
+                        <label for="yourPassword" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="psw"
+                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                            title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                            required>
+                        <div class="invalid-feedback">Please enter your password!</div>
+                    </div>
+
+                    <div class="col-12" id="message" style="display:none">
+                        <label class="form-label">Password must contain the following:</label>
+                        <div>
+                            <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                            <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                            <p id="number" class="invalid">A <b>number</b></p>
+                            <p id="length" class="invalid">Minimum <b>8 characters</b></p>
                         </div>
                     </div>
-                
+
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Confirm Password</label>
-                        <div class="col-12">
-                            <input type="password" name="confpassword" id="" placeholder="Confirm Password" class="form-control">
-                        </div>
+                        <input type="password" name="confirmpassword" class="form-control"
+                            id="confirm_psw" required>
+                        <div class="invalid-feedback">Please confirm your password!</div>
+                        <label id="conpsw" class="form-label" style="color: red;">Password not matched</label>
                     </div>
                    
                     <div class="col-12 mt-4">
@@ -87,7 +123,7 @@
                             <a href="/ForgotPassword">Resend OTP</a>
                         </div>
                         <div class="col-sm-6">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button disabled type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
                 
@@ -106,6 +142,97 @@
 
     </div>
   </main><!-- End #main -->
+  <script>
+    var myInput = document.getElementById("psw");
+    var myInput2 = document.getElementById("confirm_psw");
+    var myInput3 = document.getElementById("mob");
+
+
+    var label = document.getElementById("conpsw");
+    var label2 = document.getElementById("moblabel");
+
+    var letter = document.getElementById("letter");
+    var capital = document.getElementById("capital");
+    var number = document.getElementById("number");
+    var length = document.getElementById("length");
+
+    // When the user clicks on the password field, show the message box
+    myInput.onfocus = function () {
+        document.getElementById("message").style.display = "block";
+    }
+
+    // When the user clicks outside of the password field, hide the message box
+    myInput.onblur = function () {
+        document.getElementById("message").style.display = "none";
+    }
+
+    // When the user starts to type something inside the password field
+    myInput.onkeyup = function () {
+        // Validate lowercase letters
+        var lowerCaseLetters = /[a-z]/g;
+        if (myInput.value.match(lowerCaseLetters)) {
+            letter.classList.remove("invalid");
+            letter.classList.add("valid");
+        } else {
+            letter.classList.remove("valid");
+            letter.classList.add("invalid");
+        }
+
+        // Validate capital letters
+        var upperCaseLetters = /[A-Z]/g;
+        if (myInput.value.match(upperCaseLetters)) {
+            capital.classList.remove("invalid");
+            capital.classList.add("valid");
+        } else {
+            capital.classList.remove("valid");
+            capital.classList.add("invalid");
+        }
+
+        // Validate numbers
+        var numbers = /[0-9]/g;
+        if (myInput.value.match(numbers)) {
+            number.classList.remove("invalid");
+            number.classList.add("valid");
+        } else {
+            number.classList.remove("valid");
+            number.classList.add("invalid");
+        }
+
+        // Validate length
+        if (myInput.value.length >= 8) {
+            length.classList.remove("invalid");
+            length.classList.add("valid");
+
+        } else {
+            length.classList.remove("valid");
+            length.classList.add("invalid");
+        }
+    }
+
+    myInput2.onkeyup = function () {
+
+        // Validate length
+        if (myInput.value == myInput2.value) {
+            label.style.display = "none";
+            document.getElementById("submitBtn").disabled = false;
+        } else {
+            label.style.display = "block";
+            document.getElementById("submitBtn").disabled = true;
+        }
+    }
+
+    myInput3.onkeyup = function () {
+
+        // Validate length
+        if (myInput3.value.length == 13 && myInput3.value.charAt(0) == '+') {
+            label2.style.display = "none";
+            document.getElementById("submitBtn").disabled = false;
+        } else {
+            label2.style.display = "block";
+            document.getElementById("submitBtn").disabled = true;
+        }
+    }
+</script>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
