--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -132,7 +132,7 @@
                                             <label id="moblabel" for="yourMobile" class="form-label" style="color: red;">Invalid Mobile Number. (Include country code)</label>
                                         </div>
 
-                                        <div class="col-12">
+                                        <div class="col-12" style="display:none">
                                             <label for="yourPassword" class="form-label">Password</label>
                                             <input type="password" name="password" class="form-control" id="psw"
                                                 pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
