--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -83,13 +79,14 @@
                   </div>
 
                   <!-- changes made M-->   
-                  <form action="/LodgeComplaint" method="post">
+                  <form action="/ConfirmForgotPassword" method="post">
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Enter OTP</label>
                         <div class="col-12">
-                            <input type="number" name="oldpassword" id="" placeholder="Old Password" class="form-control">
+                            <input type="number" name="code" id="" placeholder="OTP" class="form-control">
                         </div>
                     </div><br>
+                    <input type="text" name="email" value="<%=email%>" id="" hidden>
                 
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Password</label>
