--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -81,7 +81,8 @@
                       <button class="btn btn-primary w-100" type="submit" value="Send">Login</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">Don't have account? <a href="/signup">Create an account</a></p>
+                      <p class="small mb-0">Don't have account? <a href="/Signup">Create an account</a></p>
+                      <p class="small mb-0"><a href="/ForgotPassword">Forgot Password</a></p>
                     </div>
                   </form>
 
