Added desk1 complaints backend

--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -541,7 +541,19 @@
                   <textarea name="ComplaintBody" id="" placeholder="Complaint" class="form-control" style="height: 200px"></textarea>
                 </div>
               </div>
-            
+
+              <div class="row mb-3">
+                  <label class="form-label">Complaint Type</label>
+
+                      <select name="type" class="form-select"
+                          aria-label="Default select example">
+                          <option selected> Select Complaint Typr</option>
+                          <option value="1">Salary</option>
+                          <option value="2">Pension</option>
+                      </select>
+
+              </div>
+
               <div class="row mb-3">
                 <label for="inputNumber" class="col-sm-2 col-form-label">Documents Upload</label>
                 <div class="col-sm-10">
@@ -556,10 +568,10 @@
                 </div>
               </div>
 
-              
-              
-              
-            
+
+
+
+
 
               <div class="row mb-3">
                 <div class="col-sm-10">
@@ -575,7 +587,7 @@
       </div>
 
   </section>
-    
+
 
   </main><!-- End #main -->
 
