--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -132,7 +132,7 @@
                                             <label id="moblabel" for="yourMobile" class="form-label" style="color: red;">Invalid Mobile Number. (Include country code)</label>
                                         </div>
 
-                                        <div class="col-12" style="display:none">
+                                        <div class="col-12">
                                             <label for="yourPassword" class="form-label">Password</label>
                                             <input type="password" name="password" class="form-control" id="psw"
                                                 pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
@@ -141,7 +141,7 @@
                                             <div class="invalid-feedback">Please enter your password!</div>
                                         </div>
 
-                                        <div class="col-12" id="message">
+                                        <div class="col-12" id="message" style="display:none">
                                             <label class="form-label">Password must contain the following:</label>
                                             <div>
                                                 <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
