--- a/views/user/complaintpage.ejs
+++ b/views/user/complaintpage.ejs
@@ -723,7 +723,7 @@
       
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-blank.html">
+        <a class="nav-link collapsed" href="/EditUserProfile">
           <i class="bi bi-pencil-square"></i>
           <span>Edit Profile</span>
         </a>
@@ -747,7 +747,7 @@
       <h1>Form Elements</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/Dashboard">Home</a></li>
+          <li class="breadcrumb-item"><a href="/Dashboard">Dashboard/Complaint Page</a></li>
           <li class="breadcrumb-item">Forms</li>
           <li class="breadcrumb-item active">Elements</li>
         </ol>
