--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -43,21 +43,11 @@
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
-    <div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="POST" action="#">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div><!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
 
-        <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
-            <i class="bi bi-search"></i>
-          </a>
-        </li><!-- End Search Icon-->
+
 
         <li class="nav-item dropdown">
 
@@ -204,20 +194,24 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2">
+              <%=userData.idToken.payload.name%>
+            </span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6>
+                <%=userData.idToken.payload.name%>
+              </h6>
+
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="">
                 <i class="bi bi-person"></i>
                 <span>My Profile</span>
               </a>
@@ -227,27 +221,11 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
-              </a>
-            </li>
-            <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                <i class="bi bi-question-circle"></i>
-                <span>Need Help?</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="/Logout">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
@@ -267,88 +245,53 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="/Dashboard">
+        <a class="nav-link collapsed" href="/Dashboard">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link " href="/Dashboard">
-          <i class="bi bi-grid"></i>
-          <span>Edit Profile</span>
+        <a class="nav-link collapsed" href="/UserComplaints">
+          <i class="bi bi-box-arrow-in-right"></i>
+          <span>Lodge Complaint</span>
         </a>
-      </li>
-
+      </li><!-- End Login Page Nav -->
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
+        <a class="nav-link" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-menu-button-wide"></i><span>My Account</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="components-nav" class="nav-content collapse show " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="components-alerts.html">
-              <i class="bi bi-circle"></i><span>Account Activity</span>
+            <a href="/ViewProfile">
+              <i class="bi bi-circle"></i><span>View Profile</span>
             </a>
           </li>
           <li>
-            <a href="components-accordion.html">
-              <i class="bi bi-circle"></i><span>View All Complaints</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-editprofile.html" class="active">
+            <a href="/EditUserProfile" class="active">
               <i class="bi bi-circle"></i><span>Edit Profile</span>
             </a>
           </li>
           <li>
-            <a href="components-changepassword.html">
+            <a href="/ChangePassword">
               <i class="bi bi-circle"></i><span>Change Password</span>
             </a>
           </li>
           
         </ul>
       </li><!-- End Components Nav -->
-
-
-      <li class="nav-heading">Pages</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="users-profile.html">
-          <i class="bi bi-person"></i>
-          <span>Profile</span>
-        </a>
-      </li><!-- End Profile Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-faq.html">
-          <i class="bi bi-question-circle"></i>
-          <span>F.A.Q</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
-          <i class="bi bi-envelope"></i>
-          <span>Contact</span>
-        </a>
-      </li><!-- End Contact Page Nav -->
-
-    
-
-
-
-
     </ul>
 
   </aside><!-- End Sidebar-->
 
+
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Edit Profile</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/Dashboard">Home</a></li>
+          <li class="breadcrumb-item"><a href="/Dashboard">Dashboard</a></li>
           <li class="breadcrumb-item active">Edit Profile</li>
         </ol>
       </nav>
@@ -356,7 +299,7 @@
 
 <section class="section">
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-12">
 
         <div class="card">
           <div class="card-body">
@@ -376,18 +319,12 @@
                   <input type="text" name="Age" id="" placeholder="Age" class="form-control">
                 </div>
               </div>
-              <div class="row mb-3">
-                <label for="inputDate" class="col-sm-2 col-form-label">Date</label>
-                <div class="col-sm-10">
-                  <input type="date" name="Date" id="" placeholder="Date" class="form-control">
-                </div>
-              </div>
 
               <div class="row mb-3">
                 <label class="col-sm-2 col-form-label">Gender</label>
                 <div class="col-sm-10">
                   <select name="Gender"  class="form-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
+                    <option selected>Select Gender</option>
                     <option value="1">Male</option>
                     <option value="2">Female</option>
                     <option value="3">Other</option>
@@ -401,6 +338,13 @@
                   <textarea name="Address" id="" placeholder="Address" class="form-control" style="height: 100px"></textarea>
                 </div>
               </div>
+
+              <div class="row mb-3">
+                <label for="inputText" class="col-sm-2 col-form-label">City</label>
+                <div class="col-sm-10">
+                  <input type="text" name="City/Town" id="" placeholder="City" class="form-control">
+                </div>
+              </div>
             
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">State</label>
@@ -410,9 +354,9 @@
               </div>
 
               <div class="row mb-3">
-                <label for="inputText" class="col-sm-2 col-form-label">City</label>
+                <label for="inputText" class="col-sm-2 col-form-label">Aadhar Number</label>
                 <div class="col-sm-10">
-                  <input type="text" name="City" id="" placeholder="City" class="form-control">
+                  <input type="number" name="Aadhar" id=""placeholder="Mobile" class="form-control">
                 </div>
               </div>
 
@@ -432,7 +376,7 @@
  
               <div class="row mb-3">
                 <div class="col-sm-10">
-                  <button type="submit" class="btn btn-primary">Submit Form</button>
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
               </div>
 
