Logo issue Solved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets1/img/logo.png" alt="">
-        <span>FlexStart</span>
+        <span>Yukti</span>
       </a>
 
       <nav id="navbar" class="navbar">
