Fixed the website flow for Desk1 and Desk2 users

--- a/views/desk2/complaintpage.ejs
+++ b/views/desk2/complaintpage.ejs
@@ -714,22 +714,6 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/UserComplaints">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Lodge Complaint</span>
-        </a>
-      </li><!-- End Login Page Nav -->
-
-
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-blank.html">
-          <i class="bi bi-pencil-square"></i>
-          <span>Edit Profile</span>
-        </a>
-      </li><!-- End Blank Page Nav -->
-
-      <li class="nav-item">
         <a class="nav-link collapsed" href="/ChangePassword">
           <i class="bi bi-file-earmark-lock"></i>
           <span>Change Password</span>
@@ -744,15 +728,14 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Form Elements</h1>
+      <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/Dashboard">Home</a></li>
-          <li class="breadcrumb-item">Forms</li>
-          <li class="breadcrumb-item active">Elements</li>
+          <li class="breadcrumb-item"><a href="/Desk2Dashboard">Dashboard</a></li>
+          <li class="breadcrumb-item active">View Complaint</li>
         </ol>
       </nav>
-    </div><!-- End Page Title -->
+    </div>
 
     <section class="section">
       <div class="row">
